--- a/web_sard/Views/Yard/Index.cshtml
+++ b/web_sard/Views/Yard/Index.cshtml
@@ -28,7 +28,7 @@
         <div class=" col-lg-4 colSearch">
             <div class="card mb-4 shadow">
                 <div class="card-header">
-                    @item.Code - @item._Contracttitle <span class="badge badge-@(kindcontract.classcolor) float-left shadow">@kindcontract.txt</span>
+                    @item.Code - @item.Customer.Title <span class="badge badge-@(kindcontract.classcolor) float-left shadow">@kindcontract.txt</span>
                 </div>
                 <div class="card-body">
 
