--- a/web_sard/Views/Portage/CreateOut.cshtml
+++ b/web_sard/Views/Portage/CreateOut.cshtml
@@ -1,128 +1,131 @@
 ﻿@model web_sard.Models.tbls.portage.portage
 @{
 
-    ViewData["Title"] = "ثبت باسکول خروجی - " + Model.KindTitle + " - " + Model._Contract.ContractType + (Model.Date2.HasValue ? (" - ویرایش " + Model._Contracttitle) : "");
+    ViewData["Title"] = "ثبت باسکول خروجی - " + Model.KindTitle + " - " + Model.ContractType.Title + (Model.Date2.HasValue ? (" - ویرایش " + Model.Customer.Title) : "");
 
 }
 
 
-<form asp-action="CreateOut" method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="Id" />
-    <input type="hidden" asp-for="_Contracttitle" />
-    <input type="hidden" asp-for="Weight1" />
-    <input type="hidden" asp-for="FkContract" />
-    <input type="hidden" asp-for="KindTitle" />
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card bg-gray-200">
-                        <div class="card-body">
-                            <div class="row">
-
-                                <div class="form-group col-md-4">
-                                    <label asp-for="Code" class="control-label"></label>
-                                    <input asp-for="Code" class="form-control" readonly />
-                                    <span asp-validation-for="Code" class="text-danger"></span>
-                                </div>
-
-                                <div class="form-group col-md-8">
-                                    <label class="control-label">زمان ورود</label>
-                                    <div class="input-group">
-                                        <input asp-for="Date1date" class="form-control " readonly />
-                                        <input asp-for="Date1time" class="form-control" readonly />
-                                    </div>
-                                </div>
-
-                                <div class="form-group col-md-12">
-                                    <label asp-for="_Contracttitle" class="control-label"></label>
-
-                                    <input asp-for="_Contracttitle" class="form-control" readonly>
-
-                                    <span asp-validation-for="_Contracttitle" class="text-danger"></span>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Txt" class="control-label"></label>
-                        <textarea asp-for="Txt" class="form-control"></textarea>
-                        <span asp-validation-for="Txt" class="text-danger"></span>
-                    </div>
-
-                </div>
-            </div>
-
-
-        </div>
-        <div class="col-md-6" id="vaziatContract">
-
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-body">
-            <div class="card-title">مشخصات خودرو</div>
-            <div class="row">
-                <div class="col-md-7">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="CarRanande" class="control-label"></label>
-                                <input asp-for="CarRanande" class="form-control" />
-                                <span asp-validation-for="CarRanande" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="CarMashin" class="control-label"></label>
-                                <input asp-for="CarMashin" class="form-control" />
-                                <span asp-validation-for="CarMashin" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="CarShMashin" class="control-label"></label>
-                                <input asp-for="CarShMashin" class="form-control" />
-                                <span asp-validation-for="CarShMashin" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="CarTell" class="control-label"></label>
-                                <input asp-for="CarTell" class="form-control" />
-                                <span asp-validation-for="CarTell" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label class="control-label">زمان خروج</label>
-                            <div class="input-group">
-                                <input asp-for="Date2date" class="form-control datepicker" />
-                                <input asp-for="Date2time" class="form-control" type="time" />
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                @if (Model._Contract.ContractTypeTbl.IsProduct1Packing0 == true)
-                {
-                    <div class="col-md-3">
-                        <div class="card bg-gradient-success">
+    <form asp-action="CreateOut" method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="Customer.Title" />
+        <input type="hidden" asp-for="Weight1" />
+        <input type="hidden" asp-for="FkCustomer" />
+        <input type="hidden" asp-for="FkContractType" />
+        <input type="hidden" asp-for="KindTitle" />
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card bg-gray-200">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="form-group ">
-                                        <label class="control-label text-white">وزن</label>
-                                        <span class="badge badge-info fa fa-hdd"> اول : @Model.Weight1.GetValueOrDefault().ToString("#####0.##")</span>
-                                        <span class="badge badge-light h5 fa fa-hdd" id="WeightNet"> خالص : </span>
+
+                                    <div class="form-group col-md-4">
+                                        <label asp-for="Code" class="control-label"></label>
+                                        <input asp-for="Code" class="form-control" readonly />
+                                        <span asp-validation-for="Code" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="form-group col-md-8">
+                                        <label class="control-label">زمان ورود</label>
                                         <div class="input-group">
-                                            <input asp-for="Weight2" value="@Model.Weight2.GetValueOrDefault().ToString("#####0.##")" class="form-control w-50 @(Model.Weight2.HasValue?"noactive":"") " readonly />
-                                            <div class="input-group-btn  w-50">
-                                                <button class="btn btn-light w-100" id="Weight2B" type="button">
-                                                    <i class="fa fa-hdd" id="Weight2I"> @web_sard.Models.cl.bascul.WeightBacul </i>
-                                                </button>
-                                            </div>
+                                            <input asp-for="Date1date" class="form-control " readonly />
+                                            <input asp-for="Date1time" class="form-control" readonly />
                                         </div>
-                                        <span asp-validation-for="Weight2" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="form-group col-md-12">
+                                        <label asp-for="Customer.Title" class="control-label"></label>
+
+                                        <input asp-for="Customer.Title" class="form-control" readonly>
+
+                                        <span asp-validation-for="Customer.Title" class="text-danger"></span>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Txt" class="control-label"></label>
+                            <textarea asp-for="Txt" class="form-control"></textarea>
+                            <span asp-validation-for="Txt" class="text-danger"></span>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-md-6" id="vaziatContract">
+
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <div class="card-title">مشخصات خودرو</div>
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="CarRanande" class="control-label"></label>
+                                    <input asp-for="CarRanande" class="form-control" />
+                                    <span asp-validation-for="CarRanande" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="CarMashin" class="control-label"></label>
+                                    <input asp-for="CarMashin" class="form-control" />
+                                    <span asp-validation-for="CarMashin" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="CarShMashin" class="control-label"></label>
+                                    <input asp-for="CarShMashin" class="form-control" />
+                                    <span asp-validation-for="CarShMashin" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="CarTell" class="control-label"></label>
+                                    <input asp-for="CarTell" class="form-control" />
+                                    <span asp-validation-for="CarTell" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label class="control-label">زمان خروج</label>
+                                <div class="input-group">
+                                    <input asp-for="Date2date" class="form-control datepicker" />
+                                    <input asp-for="Date2time" class="form-control" type="time" />
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    @if (Model.ContractType.IsProduct1Packing0 == true)
+                    {
+                        <div class="col-md-3">
+                            <div class="card bg-gradient-success">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="form-group ">
+                                            <label class="control-label text-white">وزن</label>
+                                            <span class="badge badge-info fa fa-hdd"> اول : @Model.Weight1.GetValueOrDefault().ToString("#####0.##")</span>
+                                            <span class="badge badge-light h5 fa fa-hdd" id="WeightNet"> خالص : </span>
+                                            <div class="input-group">
+                                                <input asp-for="Weight2" value="@Model.Weight2.GetValueOrDefault().ToString("#####0.##")" class="form-control w-50 @(Model.Weight2.HasValue?"noactive":"") " readonly />
+                                                <div class="input-group-btn  w-50">
+                                                    <button class="btn btn-light w-100" id="Weight2B" type="button">
+                                                        <i class="fa fa-hdd" id="Weight2I"> @web_sard.Models.cl.bascul.WeightBacul </i>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                            <span asp-validation-for="Weight2" class="text-danger"></span>
+                                        </div>
+
                                     </div>
 
                                 </div>
@@ -131,19 +134,17 @@
 
                         </div>
 
-                    </div>
+                    }
 
-                }
-
+                </div>
             </div>
         </div>
-    </div>
-    <div class="form-group"> 
-        <button type="submit" class="btn btn-primary fa fa-save"> ثبت</button>
-        <button type="submit" name="print" class="btn btn-info fa fa-print" value="ثبت و چاپ"> ثبت و چاپ</button>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary fa fa-save"> ثبت</button>
+            <button type="submit" name="print" class="btn btn-info fa fa-print" value="ثبت و چاپ"> ثبت و چاپ</button>
 
-    </div>
-</form>
+        </div>
+    </form>
 <div class="row">
     <div class="col-md-9">
         <div class="row">
@@ -185,7 +186,7 @@
                     <tr>
                         <td>@item.Date.ToPersianDateTime()</td>
                         <td>@item.Count</td>
-                        <td>@if (Model._Contract.ContractTypeTbl.IsProduct1Packing0) { @item.Product} @item.Packing</td>
+                        <td>@if (Model.ContractType.IsProduct1Packing0) { @item.Product} @item.Packing</td>
                         <td>@item.CodeLocation</td>
                         <td>@string.Join(",", item.ListInjurysTbl.Select(a => a.title).ToList())</td>
                         <td>@item.Txt</td>
@@ -226,7 +227,7 @@
 
 
 <div>
-    <a asp-action="Index" asp-route-idtype="@Model._Contract.ContractTypeTbl.Id">بازگشت به لیست</a>
+    <a asp-action="Index" asp-route-idtype="@Model.ContractType.Id">بازگشت به لیست</a>
 </div>
 
 @section js{
@@ -247,7 +248,7 @@
     );
 
     </script>
-    @if (Model._Contract.ContractTypeTbl.IsProduct1Packing0 == true)
+    @if (Model.ContractType.IsProduct1Packing0 == true)
     {
         <script>
 
@@ -255,7 +256,7 @@
 
         </script>
     }
-    @if (Model.FkContract != Guid.Empty)
+    @if (Model.FkCustomer != Guid.Empty)
     {
         <script>
 
